@@ -1,21 +1,19 @@
 package com.wiredi.processor.lang;
 
 import com.wiredi.annotations.Wire;
-import com.wiredi.compiler.logger.Logger;
+import org.slf4j.Logger;import com.wiredi.compiler.processor.lang.ProcessingElement;
+import com.wiredi.compiler.processor.lang.AnnotationProcessorSubroutine;
 import com.wiredi.compiler.repository.CompilerRepository;
 import com.wiredi.compiler.processor.business.AspectAwareProxyService;
 import com.wiredi.compiler.processor.business.InjectionPointService;
-import com.wiredi.compiler.processor.lang.processors.WireBaseProcessor;
 import jakarta.inject.Inject;
 
-import javax.lang.model.element.Element;
 import javax.lang.model.util.Types;
 import java.lang.annotation.Annotation;
-import java.util.Collections;
 import java.util.List;
 
 //@AutoService(Processor.class)
-public class ExampleProcessor extends WireBaseProcessor {
+public class ExampleProcessor implements AnnotationProcessorSubroutine {
 
 	@Inject
 	Logger logger;
@@ -33,12 +31,12 @@ public class ExampleProcessor extends WireBaseProcessor {
 	AspectAwareProxyService proxyService;
 
 	@Override
-	protected List<Class<? extends Annotation>> targetAnnotations() {
-		return Collections.singletonList(Wire.class);
+	public List<Class<? extends Annotation>> targetAnnotations() {
+		return List.of(Wire.class);
 	}
 
 	@Override
-	protected void handle(Element element) {
+	public void handle(ProcessingElement element) {
 	}
 
 }
